Collision avoidance updates

--- a/scope/global scope/collision-avoidance/iife/iife.html
+++ b/scope/global scope/collision-avoidance/iife/iife.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Global Scope - Collision avoidance</title>
-  <script src="scriptA.js"></script>
-  <script src="scriptB.js"></script>
+  <title>Global Scope - Collision avoidance via IIFE</title>
+  <script src="script-a.js"></script>
+  <script src="script-b.js"></script>
 </head>
 
 <body>
@@ -15,7 +15,7 @@
      <tr>
       <th scope="row" style="width: 40%;">Command</th>
       <th scope="col">Windows</th>
-      <th scope="col">macOS</th>
+      <th scope="col">macOS</th>˘
       <th scope="col">Linux</th>
      </tr>
      <tr>
