--- a/scope/global scope/collision-avoidance/const-let/const-let.html
+++ b/scope/global scope/collision-avoidance/const-let/const-let.html
@@ -22,7 +22,7 @@
       <th scope="row">Inspect Element</th>
       <td><kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>C</kbd></td>
       <td><kbd>Cmd</kbd> + <kbd>Shift</kbd> + <kbd>C</kbd></td>
-      <td><kbd>Ctrl</kbd> + <kbd>Shift</kbd> + <kbd>C</kbd></td>
+      <td><kbd>Ctrl</kbd> + <kbd>Shift</k˘bd> + <kbd>C</kbd></td>
      </tr>
     </tbody>
    </table>
