--- a/scope/global scope/collision-example/collision.html
+++ b/scope/global scope/collision-example/collision.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Global Scope - Multile Script Collisions</title>
-  <script src="scriptA.js"></script>
-  <script src="scriptB.js"></script>
+  <script src="scripts.js"></script>
+  <script src="external-library.js"></script>
 </head>
 
 <body>
