--- a/problems/test-document.html
+++ b/problems/test-document.html
@@ -5,50 +5,69 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <style>
+    .box {
+      box-sizing: border-box;
+      width: 100px;
+      margin: 10px;
+      padding: 5px;
+      border: 2px solid black;
+    }
+  </style>
 </head>
 
 <body>
+  <div class="box">
 
+  </div>
 </body>
 
 <script>
-  // Return the length of the longest sequence
-  // without repeat characters
-  const returnLength = sequence => {
-    let longestLength = null;
-    let currentSequence = [];
 
+  const solution = (pot) => {
 
-    // iterate over sequence
-    // add char to currentSequence
-    // if char is in currentSequence
-    // empty currentSequence, start over
-    // store length in longest length
-    sequence.forEach(element => {
-      if (currentSequence.length < 1) {
-        return currentSequence.push(element);
+    const check = pot.map((row, i) => {
+      nextRow = pot[i + 1];
+
+      if (!nextRow) {
+        return;
       }
 
-      if (currentSequence.includes(element)) {
-        if (currentSequence.length > longestLength) {
-          longestLength = currentSequence.length;
-        }
+      return checkForPath(row, nextRow)
 
-        currentSequence = [];
-        currentSequence.push(element);
 
-      } else {
-        currentSequence.push(element);
-        longestLength = currentSequence.length;
-      }
     });
 
-    return longestLength;
-  };
+    return !check.includes(false);
 
-  console.log(returnLength([1, 2, 3, 3, 3, 4, 5]) === 3); // expect 3
-  console.log(returnLength([2, 2, 3, 3, 3, 4, 5, 6]) === 4); // 4
-  console.log(returnLength([1, 1, 1, 3, 3, 4, 4, 4]) === 2); // 2
+  }
+
+  const returnIndexes = (arr) =>
+    arr.map((c, i) => {
+      return c === 0 ? i : null;
+    }).filter(c => c !== null)
+
+
+
+  function checkForPath(row, nextRow) {
+    const currentIndexes = returnIndexes(row)
+    const nextIndexes = returnIndexes(nextRow)
+
+
+    const intersection = currentIndexes.some(value => {
+      return nextIndexes.includes(value)
+    })
+
+
+    return intersection;
+  }
+
+  console.log(solution([
+    [1, 1, 0, 1, 1],
+    [1, 1, 0, 1, 1],
+    [0, 1, 1, 1, 1],
+    [0, 1, 1, 1, 1],
+  ]))
 </script>
 
 </html>
