--- a/problems/test-document.html
+++ b/problems/test-document.html
@@ -4,22 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
-  <style>
-    .box {
-      box-sizing: border-box;
-      width: 100px;
-      margin: 10px;
-      padding: 5px;
-      border: 2px solid black;
-    }
-  </style>
+  <title>Playground</title>
 </head>
 
 <body>
-  <div class="box">
-
-  </div>
 </body>
 
 <script>
