--- a/problems/test-document.html
+++ b/problems/test-document.html
@@ -11,50 +11,36 @@
 </body>
 
 <script>
-
-  const solution = (pot) => {
-
-    const check = pot.map((row, i) => {
-      nextRow = pot[i + 1];
-
-      if (!nextRow) {
-        return;
+  const solution = maze => {
+    traverse = function (column, row) {
+      if (maze[column][row] == 1) {
+        console.log("At valid position (" + column + ", " + row + ")");
+        maze[column][row] = 9;
+        if (column < maze.length - 1) {
+          traverse(column + 1, row);
+        }
+        if (row < maze[column].length - 1) {
+          traverse(column, row + 1);
+        }
+        if (column > 0) {
+          traverse(column - 1, row);
+        }
+        if (row > 0) {
+          traverse(column, row - 1);
+        }
+      } else {
+        console.log('no solution')
       }
+    }
 
-      return checkForPath(row, nextRow)
-
-
-    });
-
-    return !check.includes(false);
-
-  }
-
-  const returnIndexes = (arr) =>
-    arr.map((c, i) => {
-      return c === 0 ? i : null;
-    }).filter(c => c !== null)
-
-
-
-  function checkForPath(row, nextRow) {
-    const currentIndexes = returnIndexes(row)
-    const nextIndexes = returnIndexes(nextRow)
-
-
-    const intersection = currentIndexes.some(value => {
-      return nextIndexes.includes(value)
-    })
-
-
-    return intersection;
-  }
+    return traverse(0, 0)
+  };
 
   console.log(solution([
+    [1, 0, 0, 0, 1],
     [1, 1, 0, 1, 1],
-    [1, 1, 0, 1, 1],
-    [0, 1, 1, 1, 1],
-    [0, 1, 1, 1, 1],
+    [0, 1, 0, 0, 1],
+    [0, 1, 0, 1, 1],
   ]))
 </script>
 
